tests/invalid_programs/function4.jas
// Expect parameter type.

fn test(x: , y: i32) -> i32 { return 42; }
